Experimental popouts for eggshell

--- a/home-manager/modules/desktop/shared/files/ignis/scss/sheets.scss
+++ b/home-manager/modules/desktop/shared/files/ignis/scss/sheets.scss
@@ -132,6 +132,10 @@ $shape-corner-xlarge: 16px;
   font-size: 12px;
   font-weight: 400;
 }
+.label-bar {
+  font-size: 14px;
+  font-weight: bolder;
+}
 .label-large {
   font-size: 14px;
   font-weight: 500;
