--- a/home-manager/modules/desktop/shared/files/ignis/scss/style.scss
+++ b/home-manager/modules/desktop/shared/files/ignis/scss/style.scss
@@ -6,6 +6,8 @@ $fg-sub: #a6adc8;
 $fg-disabled: #585b70;
 $shadow: #11111b;
 
+$transparent: rgba($bg, 0.01);
+
 $primary: #cba6f7;
 $primary-hover: rgba($primary, 0.3);
 
@@ -206,7 +208,7 @@ $bluetooth: #89b4fa;
 }
 
 .dock {
-  padding: 0 2rem;
+  padding: 0 1.25rem;
 }
 
 .app-icon-button {
@@ -228,30 +230,52 @@ $bluetooth: #89b4fa;
 }
 
 .app-icon-button:hover {
-  border-bottom: 0.4rem solid rgba($primary, 1)
+  border-bottom: 0.4rem solid rgba($primary, 1);
+}
+
+// Launcher
+
+.tile {
+  min-height: 128px;
+  min-width: 128px;
+  padding: 36px;
+  background-color: $layout;
+  margin: 16px;
+}
+
+.tile:hover {
+  box-shadow:
+    0 0 20px 0 $primary inset,
+    0 0 0 4px $primary inset;
+}
+
+.tile:focus {
+  box-shadow:
+    0 0 0 4px $transparent,
+    0 0 0 4px $fg-sub;
 }
 
 // Common
 
 .slider-small trough {
-    background-color: $fg-disabled;
-    min-height: 8px;
-    border-radius: 4px;
-    margin: 4px 0;
+  background-color: $fg-disabled;
+  min-height: 8px;
+  border-radius: 4px;
+  margin: 4px 0;
 
-    highlight {
-      background-color: $primary;
-    }
-
-    slider {
-      background-color: $bg;
-      min-width: 16px;
-      min-height: 16px;
-      margin: -8px;
-      border-radius: 16px;
-      border: 2px solid $primary;
-    }
+  highlight {
+    background-color: $primary;
   }
+
+  slider {
+    background-color: $bg;
+    min-width: 16px;
+    min-height: 16px;
+    margin: -8px;
+    border-radius: 16px;
+    border: 2px solid $primary;
+  }
+}
 
 // Other
 
@@ -279,7 +303,8 @@ popover.menu {
       border-radius: 0.5rem;
       padding: 0.35rem 1rem;
     }
-    modelbutton:hover, modelbutton:focus {
+    modelbutton:hover,
+    modelbutton:focus {
       background-color: $bg-control;
     }
     separator {
