--- a/home-manager/modules/desktop/shared/files/ignis/scss/sheets.scss
+++ b/home-manager/modules/desktop/shared/files/ignis/scss/sheets.scss
@@ -1,87 +1,56 @@
-$bg: #181825;
-$bg-input: #1e1e2e;
-$bg-control: #313244;
-$fg: #cdd6f4;
-$fg-sub: #a6adc8;
-$fg-disabled: #585b70;
-$shadow: #11111b;
-
-$primary: #cba6f7;
-$primary-hover: rgba($primary, 0.3);
-$clock: #89b4fa;
-$layout: #89dceb;
-
-$shadow-y: 0px;
-$shadow-blur: 2px;
-
-$shape-corner-small: 4px;
-$shape-corner-medium: 6px;
-$shape-corner-large: 8px;
-$shape-corner-xlarge: 16px;
+@use "variables";
 
 .popup {
-  background-color: rgba($bg, 0.95);
-  border-radius: $shape-corner-xlarge;
-  padding: $shape-corner-xlarge;
-  // border: 1px solid $fg-disabled;
+  background-color: rgba(variables.$bg, 0.95);
+  border-radius: variables.$shape-corner-xlarge;
+  padding: variables.$shape-corner-xlarge;
+  // border: 1px solid variables.$fg-disabled;
 }
 
 .dock {
-  background-color: rgba($bg, 0.85);
-  border-radius: $shape-corner-xlarge $shape-corner-xlarge 0 0;
-  padding: $shape-corner-xlarge;
-  // border: 1px solid $fg-disabled;
+  background-color: rgba(variables.$bg, 0.85);
+  border-radius: variables.$shape-corner-xlarge variables.$shape-corner-xlarge 0
+    0;
+  padding: variables.$shape-corner-xlarge;
+  // border: 1px solid variables.$fg-disabled;
 }
 
 .margin-auto {
 }
 
 .sheet {
-  background-color: $bg;
+  background-color: variables.$bg;
 }
 
 .control {
-  background-color: $bg-control;
+  background-color: variables.$bg-control;
   padding: 1rem;
-  border-radius: $shape-corner-large;
+  border-radius: variables.$shape-corner-large;
 }
 
 .elevation1 {
-  margin: $shadow-blur;
-  box-shadow: 0px $shadow-y $shadow-blur 0px $shadow;
+  box-shadow: 0 0 2px 0 variables.$shadow;
 }
 
 .elevation2 {
-  margin: $shadow-blur * 2;
-  box-shadow: 0px $shadow-y $shadow-blur * 2 0px $shadow;
+  box-shadow: 0 0 2px 1px variables.$shadow;
+}
+
+.elevation3 {
+  box-shadow: 0 0 3px 2px variables.$shadow;
 }
 
 .corner-small {
-  border-radius: $shape-corner-small;
+  border-radius: variables.$shape-corner-small;
 }
 
 .corner-medium {
-  border-radius: $shape-corner-medium;
+  border-radius: variables.$shape-corner-medium;
 }
 
 .corner-large {
-  border-radius: $shape-corner-large;
+  border-radius: variables.$shape-corner-large;
 }
-
-// .has-shadow {
-//   margin: 5px;
-//   box-shadow: 0 0 3px 2px $shadow;
-// }
-
-// .has-outline {
-//   box-shadow: inset 0 0 0 2px $primary;
-// }
-
-// .has-shadow.has-outline {
-//   box-shadow:
-//     0 0 3px 2px $shadow,
-//     inset 0 0 0 2px $primary;
-// }
 
 // Typography
 
