--- a/home-manager/modules/desktop/shared/files/ignis/scss/variables.scss
+++ b/home-manager/modules/desktop/shared/files/ignis/scss/variables.scss
@@ -1,6 +1,7 @@
 $bg: #181825;
 $bg-input: #1e1e2e;
 $bg-control: #313244;
+$bg-control-hover: #45475a;
 $fg: #cdd6f4;
 $fg-sub: #a6adc8;
 $fg-disabled: #585b70;
