Fix sizing mistakes

--- a/home-manager/modules/desktop/shared/files/ignis/scss/sheets.scss
+++ b/home-manager/modules/desktop/shared/files/ignis/scss/sheets.scss
@@ -64,66 +64,66 @@
 }
 
 .display-large {
-  font-size: 57px;
+  font-size: 57pt;
   font-weight: 400;
 }
 .display-medium {
-  font-size: 45px;
+  font-size: 45pt;
   font-weight: 400;
 }
 .display-small {
-  font-size: 36px;
+  font-size: 36pt;
   font-weight: 400;
 }
 .headline-large {
-  font-size: 32px;
+  font-size: 32pt;
   font-weight: 400;
 }
 .headline-medium {
-  font-size: 28px;
+  font-size: 28pt;
   font-weight: 400;
 }
 .headline-small {
-  font-size: 24px;
+  font-size: 24pt;
   font-weight: 400;
 }
 .title-large {
-  font-size: 22px;
+  font-size: 22pt;
   font-weight: 400;
 }
 .title-medium {
-  font-size: 16px;
+  font-size: 16pt;
   font-weight: 500;
 }
 .title-small {
-  font-size: 14px;
+  font-size: 14pt;
   font-weight: 500;
 }
 .body-large {
-  font-size: 16px;
+  font-size: 16pt;
   font-weight: 400;
 }
 .body-medium {
-  font-size: 14px;
+  font-size: 14pt;
   font-weight: 400;
 }
 .body-small {
-  font-size: 12px;
+  font-size: 12pt;
   font-weight: 400;
 }
 .label-bar {
-  font-size: 14px;
+  font-size: 12pt;
   font-weight: bolder;
 }
 .label-large {
-  font-size: 14px;
+  font-size: 14pt;
   font-weight: 500;
 }
 .label-medium {
-  font-size: 12px;
+  font-size: 12pt;
   font-weight: 500;
 }
 .label-small {
-  font-size: 11px;
+  font-size: 11pt;
   font-weight: 500;
 }
