--- a/home-manager/modules/desktop/shared/files/ignis/scss/variables.scss
+++ b/home-manager/modules/desktop/shared/files/ignis/scss/variables.scss
@@ -3,7 +3,7 @@ $bg-input: #1e1e2e;
 $bg-control: #313244;
 $bg-control-hover: #45475a;
 $fg: #cdd6f4;
-$fg-sub: #a6adc8;
+$fg-subtext: #a6adc8;
 $fg-disabled: #585b70;
 $shadow: #11111b;
 
@@ -19,11 +19,11 @@ $shape-corner-xlarge: 16px;
 
 $clock: #74c7ec;
 $layout: #89dceb;
-$audio: #fab387;
+$audio: #f2cdcd;
 $brightness: #f9e2af;
 $power: #94e2d5;
 $power-critical: #f38ba8;
-$power-warning: #f38ba8;
+$power-warning: #fab387;
 $power-normal: #a6e3a1;
 $network: #b4befe;
 $bluetooth: #89b4fa;
