--- a/home-manager/modules/desktop/shared/files/ignis/scss/base.scss
+++ b/home-manager/modules/desktop/shared/files/ignis/scss/base.scss
@@ -4,9 +4,9 @@
 
 .slider-small trough {
   background-color: variables.$fg-disabled;
-  min-height: 5px;
+  min-height: 6px;
   border-radius: 3px;
-  margin: 4px 0;
+  margin: 8px 0px;
 
   highlight {
     background-color: variables.$primary;
@@ -108,7 +108,7 @@ popover.menu {
     }
 
     arrow {
-      opacity: 0.5;
+      opacity: 0.7;
 
       &:hover {
         background: none;
