--- a/home-manager/modules/desktop/shared/files/ignis/scss/style.scss
+++ b/home-manager/modules/desktop/shared/files/ignis/scss/style.scss
@@ -41,8 +41,8 @@
 }
 
 .control-button {
-  background: variables.$bg-input;
-  border: 1px solid variables.$bg-input;
+  background: variables.$bg-control;
+  border: 1px solid variables.$bg-control;
   padding: 8px;
   color: variables.$primary;
   border-radius: 36px;
