--- a/home-manager/modules/desktop/shared/files/ignis/scss/sheets.scss
+++ b/home-manager/modules/desktop/shared/files/ignis/scss/sheets.scss
@@ -8,25 +8,68 @@
 }
 
 .flyout-left {
-  margin: 10px 5px 10px 0;
-  border-radius: 0 variables.$shape-corner-xlarge variables.$shape-corner-xlarge 0; 
+  margin: 5px 5px 5px 0;
+  border-radius: 0 variables.$shape-corner-xlarge variables.$shape-corner-xlarge 0;
   padding: variables.$shape-corner-xlarge;
   background-color: variables.$bg;
   // border: 1px solid variables.$fg-disabled;
 }
 
 .flyout-right {
-  margin: 10px 0 10px 5px;
-  border-radius: variables.$shape-corner-xlarge 0 0 variables.$shape-corner-xlarge; 
+  margin: 5px 0 5px 5px;
+  border-radius: variables.$shape-corner-xlarge 0 0 variables.$shape-corner-xlarge;
   padding: variables.$shape-corner-xlarge;
   background-color: variables.$bg;
   // border: 1px solid variables.$fg-disabled;
+}
+
+.button-fab-power-off {
+  border-radius: 24px;
+  background-color: #f38ba8;
+  image {
+    color: variables.$shadow;
+  }
+}
+.button-fab-sleep {
+  border-radius: 24px;
+  background-color: #b4befe;
+  image {
+    color: variables.$shadow;
+  }
+}
+.button-fab-hibernate {
+  border-radius: 24px;
+  background-color: #f2cdcd;
+  image {
+    color: variables.$shadow;
+  }
+}
+.button-fab-restart {
+  border-radius: 24px;
+  background-color: #a6e3a1;
+  image {
+    color: variables.$shadow;
+  }
+}
+.button-fab-log-out {
+  border-radius: 24px;
+  background-color: #f9e2af;
+  image {
+    color: variables.$shadow;
+  }
 }
 
 .input {
   background-color: variables.$bg-input;
   border-radius: variables.$shape-corner-large;
   padding: variables.$shape-corner-large;
+  font-size: 13pt;
+}
+
+.section {
+  background-color: variables.$bg-control;
+  border-radius: variables.$shape-corner-large;
+  padding: 24px;
   font-size: 13pt;
 }
 
