--- a/home-manager/modules/desktop/shared/files/ignis/scss/launcher.scss
+++ b/home-manager/modules/desktop/shared/files/ignis/scss/launcher.scss
@@ -12,7 +12,6 @@
 .launcher-input {
   padding: 0.75rem;
   font-size: 16pt;
-  border-bottom: solid 1px variables.$primary;
 }
 
 .launcher-input placeholder, .launcher-input-icon {
@@ -20,6 +19,7 @@
 }
 
 .launcher-scroller {
+  border-top: solid 1px variables.$primary;
   transition: 0.3ms;
 }
 
