--- a/home-manager/modules/desktop/shared/files/ignis/scss/sheets.scss
+++ b/home-manager/modules/desktop/shared/files/ignis/scss/sheets.scss
@@ -23,6 +23,14 @@
   // border: 1px solid variables.$fg-disabled;
 }
 
+.flyout-down {
+  margin: 5px;
+  border-radius: variables.$shape-corner-xlarge;
+  padding: variables.$shape-corner-xlarge;
+  background-color: variables.$bg;
+  // border: 1px solid variables.$fg-disabled;
+}
+
 .button-fab-power-off {
   border-radius: 24px;
   background-color: #f38ba8;
@@ -136,6 +144,10 @@
 .nerd-font-icon {
   font-family: "Ubuntu Nerd Font";
   font-size: 18px;
+}
+
+.monospace {
+  font-family: monospace;
 }
 
 .emphasized {
