--- a/home-manager/modules/desktop/shared/files/ignis/scss/variables.scss
+++ b/home-manager/modules/desktop/shared/files/ignis/scss/variables.scss
@@ -9,8 +9,7 @@ $shadow: #11111b;
 
 $primary: #cba6f7;
 $primary-hover: rgba($primary, 0.3);
-$clock: #89b4fa;
-$layout: #89dceb;
+$error: #f38ba8;
 
 $shape-corner-small: 4px;
 $shape-corner-medium: 6px;
