--- a/home-manager/modules/desktop/shared/files/ignis/scss/notifications.scss
+++ b/home-manager/modules/desktop/shared/files/ignis/scss/notifications.scss
@@ -1,26 +1,24 @@
 @use "variables";
 
 .notifications-window {
-  min-width: 29rem;
-  margin: 5px;
+  min-width: 40rem;
 }
 
 .notification-popup {
-  background-color: rgba(variables.$bg, 1.95);
+  margin: 6px;
+  background-color: variables.$bg-transparent;
   border-radius: variables.$shape-corner-xlarge;
-  padding: variables.$shape-corner-xlarge;
-  box-shadow: inset 0 0 0 2px variables.$primary;
-
-  margin-bottom: 4px;
+  padding: 0.75rem;
+  box-shadow: inset 0 0 1px 1px variables.$primary;
 
   .notification-icon {
-    margin-right: variables.$shape-corner-large;
+    margin-top: 0.25rem;
+    margin-right: 0.5rem;
   }
 
   .notification-summary {
-    margin-top: 3px;
     font-weight: 500;
-    font-size: 14pt;
+    font-size: larger;
   }
 
   .notification-body {
