--- a/home-manager/modules/desktop/shared/files/ignis/scss/sheets.scss
+++ b/home-manager/modules/desktop/shared/files/ignis/scss/sheets.scss
@@ -1,30 +1,14 @@
 @use "variables";
 
 .popup {
-  background-color: rgba(variables.$bg, 0.95);
+  background-color: variables.$bg-transparent;
   border-radius: variables.$shape-corner-xlarge;
   padding: variables.$shape-corner-xlarge;
   // border: 1px solid variables.$fg-disabled;
 }
 
-.flyout-left {
-  margin: 5px 5px 5px 0;
-  border-radius: 0 variables.$shape-corner-xlarge variables.$shape-corner-xlarge 0;
-  padding: variables.$shape-corner-xlarge;
-  background-color: variables.$bg;
-  // border: 1px solid variables.$fg-disabled;
-}
-
-.flyout-right {
-  margin: 5px 0 5px 5px;
-  border-radius: variables.$shape-corner-xlarge 0 0 variables.$shape-corner-xlarge;
-  padding: variables.$shape-corner-xlarge;
-  background-color: variables.$bg;
-  // border: 1px solid variables.$fg-disabled;
-}
-
-.flyout-down {
-  margin: 5px;
+.flyout {
+  margin: 6px;
   border-radius: variables.$shape-corner-xlarge;
   padding: variables.$shape-corner-xlarge;
   background-color: variables.$bg;
@@ -71,23 +55,13 @@
   background-color: variables.$bg-input;
   border-radius: variables.$shape-corner-large;
   padding: variables.$shape-corner-large;
-  font-size: 13pt;
 }
 
 .section {
   background-color: variables.$bg-control;
   border-radius: variables.$shape-corner-large;
+  padding: variables.$shape-corner-large;
   padding: 24px;
-  font-size: 13pt;
-}
-
-.dock {
-  margin: 5px 5px 0  5px;
-  background-color: rgba(variables.$bg, 0.85);
-  border-radius: variables.$shape-corner-xlarge variables.$shape-corner-xlarge 0
-    0;
-  padding: variables.$shape-corner-xlarge;
-  // border: 1px solid variables.$fg-disabled;
 }
 
 .fade {
