--- a/home-manager/modules/desktop/shared/files/ignis/scss/variables.scss
+++ b/home-manager/modules/desktop/shared/files/ignis/scss/variables.scss
@@ -1,4 +1,5 @@
 $bg: #181825;
+$bg-transparent: rgba($bg, 0.95);
 $bg-input: #1e1e2e;
 $bg-control: #313244;
 $bg-control-hover: #45475a;
@@ -12,9 +13,9 @@ $primary-hover: rgba($primary, 0.3);
 $error: #f38ba8;
 
 $shape-corner-small: 4px;
-$shape-corner-medium: 6px;
-$shape-corner-large: 8px;
-$shape-corner-xlarge: 16px;
+$shape-corner-medium: 0.5rem;
+$shape-corner-large: 0.75rem;
+$shape-corner-xlarge: 1rem;
 
 $clock: #74c7ec;
 $layout: #89dceb;
