--- a/home-manager/modules/desktop/shared/files/ignis/scss/variables.scss
+++ b/home-manager/modules/desktop/shared/files/ignis/scss/variables.scss
@@ -10,6 +10,7 @@ $shadow: #11111b;
 
 $primary: #cba6f7;
 $primary-hover: rgba($primary, 0.3);
+$secondary: #b4befe;
 $error: #f38ba8;
 
 $shape-corner-small: 4px;
