--- a/home-manager/modules/desktop/shared/files/ignis/scss/notifications.scss
+++ b/home-manager/modules/desktop/shared/files/ignis/scss/notifications.scss
@@ -45,7 +45,7 @@
 
   .notification-close {
     color: variables.$error;
-    margin-left: variables.$shape-corner-large;
+    margin-left: 0.25rem;
     image {
       color: variables.$error;
     }
