--- a/home-manager/modules/desktop/shared/files/ignis/scss/sheets.scss
+++ b/home-manager/modules/desktop/shared/files/ignis/scss/sheets.scss
@@ -4,15 +4,12 @@
   background-color: variables.$bg-transparent;
   border-radius: variables.$shape-corner-xlarge;
   padding: variables.$shape-corner-xlarge;
-  // border: 1px solid variables.$fg-disabled;
 }
 
 .flyout {
-  margin: 6px;
   border-radius: variables.$shape-corner-xlarge;
   padding: variables.$shape-corner-xlarge;
-  background-color: variables.$bg-transparent;
-  // border: 1px solid variables.$fg-disabled;
+  background-color: variables.$bg;
 }
 
 .user-profile {
@@ -106,23 +103,21 @@
 }
 
 .elevation1 {
-  box-shadow: 0 0 2px 0 rgba(variables.$shadow, 0.8);
-}
-
-.elevation2 {
-  box-shadow: 0 0 2px 1px rgba(variables.$shadow, 0.8);
+  box-shadow: rgba(variables.$shadow, 0.8) 0px 1px 3px 0px;
 }
 
 .elevation3 {
-  box-shadow: 0 0 3px 2px rgba(variables.$shadow, 0.8);
+  margin: 0 6px 6px;
+  box-shadow: rgba(variables.$shadow, 0.8) 0px 2px 6px 1px;
 }
 
 .elevation4 {
-  box-shadow: 0 0 4px 2px rgba(variables.$shadow, 0.8);
+  margin: 0 6px 8px;
+  box-shadow: rgba(variables.$shadow, 0.8) 0px 4px 6px 2px;
 }
 
-.elevation5 {
-  box-shadow: 0 0 5px 3px rgba(variables.$shadow, 0.8);
+.window {
+  border: solid 2px variables.$window_border; 
 }
 
 .corner-small {
