--- a/home-manager/modules/desktop/shared/files/ignis/scss/variables.scss
+++ b/home-manager/modules/desktop/shared/files/ignis/scss/variables.scss
@@ -7,6 +7,7 @@ $fg: #cdd6f4;
 $fg-subtext: #a6adc8;
 $fg-disabled: #585b70;
 $shadow: #11111b;
+$window_border: #313244;
 
 $primary: #cba6f7;
 $primary-hover: rgba($primary, 0.3);
