--- a/static/ignis/scss/bar.scss
+++ b/static/ignis/scss/bar.scss
@@ -18,29 +18,47 @@
 
   .pill-button {
     border-radius: 1rem;
-    padding: 0.25rem 0.3rem;
+    padding: 0.25rem 0.5rem;
     transition: 0.3s;
   }
 
   .pill-button label {
-    margin-right: 0.4rem;
+    margin-right: 0.3rem;
     transition: 0.3ms;
   }
 
-  .pill-button.workspace {
+  .pill-icon-button {
+    border-radius: 1rem;
+    padding: 0.25rem 0.3rem;
+    transition: 0.3s;
+  }
+
+  .pill-icon-button label {
+    margin-right: 0.5rem;
+    transition: 0.3ms;
+  }
+
+  .pill-workspace-button {
+    border-radius: 1rem;
     padding-left: 0.7rem;
     padding-right: 0.3rem;
     min-width: 1rem;
   }
 
-  .pill-button:hover {
+  .pill-workspace-button label {
+    margin-right: 0.4rem;
+  }
+
+  .pill-button:hover,
+  .pill-workspace-button:hover {
     background-color: rgba(variables.$bg-control, 0.4);
   }
 
-  .pill-button:focus {
+  .pill-button:focus,
+  .pill-workspace-button:hover {
   }
 
-  .pill-button.active {
+  .pill-workspace-button.active {
     background-color: variables.$primary;
     color: variables.$bg;
   }
